--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/react-store": "^0.8.0",
+    "@tanstack/react-table": "^8.21.3",
     "@tanstack/store": "^0.8.0",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
