--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,5 +3,13 @@
   "name": "tanstack-start-app",
   "compatibility_date": "2025-09-02",
   "compatibility_flags": ["nodejs_compat"],
-  "main": "@tanstack/react-start/server-entry"
+  "main": "./src/server.ts",
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "finance",
+      // Replace with the database_id from: wrangler d1 create finance
+      "database_id": "REPLACE_WITH_DATABASE_ID"
+    }
+  ]
 }
