--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-store": "^0.8.0",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/store": "^0.8.0",
+    "arctic": "^3.7.0",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
